// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Leg Information Render Leg Information 1`] = `
<div
  className="leg-information__leg-info"
>
  <div
    className="leg-information__leg-info-name"
    tabIndex="0"
  >
    DXB
  </div>
  <div
    className="leg-information__leg-info-time"
    tabIndex="0"
  >
    08:30
  </div>
  <div
    className="leg-information__leg-info-time"
    tabIndex="0"
  >
    29 Sep 21
  </div>
</div>
`;

exports[`Test Leg Information Render Leg Information for Mobile 1`] = `
<div
  className="leg-information__leg-info"
>
  <div
    className="leg-information__leg-info-name-mobile"
    tabIndex="0"
  >
    DXB
  </div>
  <div
    className="leg-information__leg-info-time-mobile"
    tabIndex="0"
  >
    08:30
  </div>
  <div
    className="leg-information__leg-info-time-mobile"
    tabIndex="0"
  >
    29 Sep 21
  </div>
</div>
`;
